--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -77,13 +77,13 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Us</h3>
-                <p>Email: info@kashmirfrozen.com</p>
-                <p>Phone: +91 1234567890</p>
-                <p>Srinagar, Kashmir</p>
+                <p>Email: frozenkashmir2007@gmail.com</p>
+                <p>Phone: +91 95419 05293, +91 95416 14157</p>
+                <p>Chandilora, Tangmarg Kashmir</p>
             </div>
         </div>
         <div class="copyright">
-            &copy; 2024 Frozen Kashmir Tour & Travels. All rights reserved.
+            &copy; 2026 Frozen Kashmir Tour & Travels. All rights reserved.
         </div>
     </footer>
 
