--- a/templates/travel/contact.html
+++ b/templates/travel/contact.html
@@ -21,7 +21,7 @@
                         📍</div>
                     <div>
                         <h4 style="margin-bottom: 0.2rem;">Address</h4>
-                        <p style="color: #666;">Boulevard Road, Dal Lake,<br>Srinagar, Kashmir 190001</p>
+                        <p style="color: #666;">Chandilora, Tangmarg<br>Kashmir 193402</p>
                     </div>
                 </div>
 
@@ -31,7 +31,7 @@
                         📞</div>
                     <div>
                         <h4 style="margin-bottom: 0.2rem;">Phone</h4>
-                        <p style="color: #666;">+91 98765 43210<br>+91 12345 67890</p>
+                        <p style="color: #666;">+91 95419 05293<br>+91 95416 14157</p>
                     </div>
                 </div>
 
@@ -41,7 +41,7 @@
                         ✉️</div>
                     <div>
                         <h4 style="margin-bottom: 0.2rem;">Email</h4>
-                        <p style="color: #666;">info@kashmirfrozen.com<br>bookings@kashmirfrozen.com</p>
+                        <p style="color: #666;">frozenkashmir2007@gmail.com<br></p>
                     </div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <!-- Map -->
             <div style="height: 300px; border-radius: 20px; overflow: hidden; box-shadow: var(--shadow-md);">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105627.86877764654!2d74.7286282645672!3d34.08365313341804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1855686e3c5ef%3A0x662248e02a6f15e1!2sSrinagar!5e0!3m2!1sen!2sin!4v1645516000000!5m2!1sen!2sin"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105627.86877764654!2d74.7286282645672!3d34.08365313341804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1855686e3c5ef%3A0x662248e02a6f15e1!2sTangmarg!5e0!3m2!1sen!2sin!4v1645516000000!5m2!1sen!2sin"
                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
