--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="{% block meta_keywords %}Kashmir tours, Gulmarg packages, Pahalgam trips, Kashmir honeymoon, Kashmir tourism, Srinagar tours{% endblock %}">
     <meta name="author" content="Frozen Kashmir Tour & Travels">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="PMmZXOr5KFt4aNlBdxeKwbkCeDO_ln2gSsYNQAGoJAA" />
     
     {# Canonical URL #}
     <link rel="canonical" href="{% block canonical_url %}https://frozenkashmir.com{{ request.path }}{% endblock %}">
