--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -145,6 +145,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"
+     crossorigin="anonymous"></script>
     <script>
         // Mobile menu toggle
         const hamburger = document.getElementById('hamburger');
