--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -42,6 +42,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'travel/css/style.css' %}">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"
+     crossorigin="anonymous"></script>
     
     {# JSON-LD Structured Data - Organization #}
     <script type="application/ld+json">
