--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-adsense-account" content="ca-pub-4116843268604781">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -147,8 +148,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"
-     crossorigin="anonymous"></script>
     <script>
         // Mobile menu toggle
         const hamburger = document.getElementById('hamburger');
