--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-adsense-account" content="ca-pub-4116843268604781">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
