--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-    <meta name="google-adsense-account" content="ca-pub-4116843268604781">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -14,6 +13,7 @@
     <meta name="author" content="Frozen Kashmir Tour & Travels">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="PMmZXOr5KFt4aNlBdxeKwbkCeDO_ln2gSsYNQAGoJAA" />
+    <meta name="google-adsense-account" content="ca-pub-4116843268604781">
     
     {# Canonical URL #}
     <link rel="canonical" href="{% block canonical_url %}https://frozenkashmir.com{{ request.path }}{% endblock %}">
@@ -43,8 +43,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'travel/css/style.css' %}">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"
-     crossorigin="anonymous"></script>
+<!--    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"-->
+<!--     crossorigin="anonymous"></script>-->
     
     {# JSON-LD Structured Data - Organization #}
     <script type="application/ld+json">
