--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="{% block meta_keywords %}Kashmir tours, Gulmarg packages, Pahalgam trips, Kashmir honeymoon, Kashmir tourism, Srinagar tours{% endblock %}">
     <meta name="author" content="Frozen Kashmir Tour & Travels">
     <meta name="robots" content="index, follow">
-    <meta name="google-adsense-account" content="ca-pub-4116843268604781">
+<!--    <meta name="google-adsense-account" content="ca-pub-4116843268604781">-->
     <meta name="google-site-verification" content="PMmZXOr5KFt4aNlBdxeKwbkCeDO_ln2gSsYNQAGoJAA" />
 
     {# Canonical URL #}
@@ -43,8 +43,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'travel/css/style.css' %}">
-<!--    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4116843268604781"-->
-<!--     crossorigin="anonymous"></script>-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6955346946355268"
+         crossorigin="anonymous"></script>
     
     {# JSON-LD Structured Data - Organization #}
     <script type="application/ld+json">
