--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6955346946355268"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -12,7 +14,6 @@
     <meta name="keywords" content="{% block meta_keywords %}Kashmir tours, Gulmarg packages, Pahalgam trips, Kashmir honeymoon, Kashmir tourism, Srinagar tours{% endblock %}">
     <meta name="author" content="Frozen Kashmir Tour & Travels">
     <meta name="robots" content="index, follow">
-    <meta name="google-adsense-account" content="ca-pub-6955346946355268">
 
     {# Canonical URL #}
     <link rel="canonical" href="{% block canonical_url %}https://frozenkashmir.com{{ request.path }}{% endblock %}">
