--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -23,6 +23,7 @@
     <meta property="og:url" content="https://frozenkashmir.com{{ request.path }}">
     <meta property="og:type" content="{% block og_type %}website{% endblock %}">
     <meta property="og:site_name" content="Frozen Kashmir Tour & Travels">
+    <meta name="google-adsense-account" content="ca-pub-6955346946355268">
     
     {# Twitter Card Tags #}
     <meta name="twitter:card" content="summary_large_image">
@@ -41,8 +42,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'travel/css/style.css' %}">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6955346946355268"
-     crossorigin="anonymous"></script>
     
     {# JSON-LD Structured Data - Organization #}
     <script type="application/ld+json">
