--- a/templates/travel/blog_list.html
+++ b/templates/travel/blog_list.html
@@ -129,8 +129,7 @@ blog for insider insights on visiting Kashmir.{% endblock %}
                         <a href="?category={{ category.slug }}"
                             style="color: #555; text-decoration: none; display: flex; justify-content: space-between;">
                             <span>{{ category.name }}</span>
-                            <span style="color: var(--accent-color); font-weight: 600;">{{ category.posts.count
-                                }}</span>
+                            <span style="color: var(--accent-color); font-weight: 600;">{{ category.posts.count}}</span>
                         </a>
                     </li>
                     {% endfor %}
