--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -147,6 +147,7 @@
                     <li><a href="{% url 'destination_list' %}">Destinations</a></li>
                     <li><a href="{% url 'blog_list' %}">Blog</a></li>
                     <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                    <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section">
