--- a/templates/travel/base.html
+++ b/templates/travel/base.html
@@ -6,11 +6,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBTV266EJP"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-EBTV266EJP');
+        gtag('config', 'G-EBTV266EJP');
     </script>
     <meta name="google-adsense-account" content="ca-pub-6955346946355268">
     <meta charset="UTF-8">
@@ -170,6 +170,9 @@
             &copy; 2026 Frozen Kashmir Tour & Travels. All rights reserved.
         </div>
     </footer>
+
+    <!-- Contact Modal -->
+    {% include 'contact_modal.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
